--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
 DATABASE_URL=
+
 JWT_SECRET_KEY=
+
+GOOGLE_SENDER_EMAIL=""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_REFRESH_TOKEN=""
+GOOGLE_REDIRECT_URL=""
+
+IMAGEKIT_PUBLIC_KEY=""
+IMAGEKIT_PRIVATE_KEY=""
+IMAGEKIT_ENDPOINT_URL=""
