--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
+    "googleapis": "^137.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "prisma": "^5.14.0",
+    "socket.io": "^4.7.5",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.4.2"
   }
