--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "googleapis": "^137.1.0",
+    "imagekit": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "prisma": "^5.14.0",
