--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -9,6 +9,8 @@ servers:
 tags:
   - name: "Users"
     description: Operations about user
+  - name: "Ticket"
+    description: Operations about Flight Schedule
 paths:
   /users/register:
     post:
@@ -355,16 +357,7 @@ paths:
                     type: string
                     example: "Your password has been updated successfully!"
                   data:
-                    properties:
-                      id:
-                        type: integer
-                        example: 1
-                      name:
-                        type: string
-                        example: Bagus Dwi
-                      email:
-                        type: string
-                        example: flynowb6@gmail.com
+                     $ref: '#/components/schemas/UserResponse'
 
         400:
           description: Both password and password confirmation are required!!
@@ -472,198 +465,11 @@ paths:
       security:
         - bearerAuth: []
 
-  /users:
-    get:
-      tags:
-        - "Users"
-      summary: Get all users
-      parameters:
-        - schema:
-            type: string
-          name: search
-          in: query
-          description: search for get first_name users
-      description: Get all users
-      responses:
-        200:
-          description: Success get all users
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: boolean
-                    example: true
-                  message:
-                    type: string
-                    example: Success
-                  data:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                          example: 1
-                        first_name:
-                          type: string
-                          example: Bagus Dwi
-                        last_name:
-                          type: string
-                          example: Putra Adiyono
-                        email:
-                          type: string
-                          example: sugab.dwi88@gmail.com
-
-  /forget-pass:
-    post:
-      tags:
-        - "Users"
-      summary: Forget Password Email User
-      description: Forget Password Email User
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  format: email
-                  example: sugab.dwi88@gmail.com
-
-      responses:
-        200:
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: boolean
-                    example: true
-                  message:
-                    type: string
-                    example: "Success Send Email Forget Password"
-
-        404:
-          description: user not found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: boolean
-                    example: false
-                  message:
-                    type: string
-                    example: "user not found"
-                  data:
-                    example: ~
-
-  /reset-pass:
-    post:
-      tags:
-        - "Users"
-      summary: Reset Password Email User
-      parameters:
-        - schema:
-            type: string
-          name: token
-          in: query
-          description: token for update password
-      description: Reset Password Email User
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                password:
-                  type: string
-                  example: qwerty
-                passwordConfirmation:
-                  type: string
-                  example: qwerty
-
-      responses:
-        200:
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: boolean
-                    example: true
-                  message:
-                    type: string
-                    example: "Your password has been updated successfully!"
-                  data:
-                    properties:
-                      id:
-                        type: integer
-                        example: 1
-                      name:
-                        type: string
-                        example: Bagus Dwi
-                      email:
-                        type: string
-                        example: sugab.dwi88@gmail.com
-
-        400:
-          description: Both password and password confirmation are required!!
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: boolean
-                    example: false
-                  message:
-                    type: string
-                    example: "Both password and password confirmation are required!!"
-                  data:
-                    example: ~
-
-        401:
-          description: Please ensure that the password and password confirmation match!
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: boolean
-                    example: false
-                  message:
-                    type: string
-                    example: "Please ensure that the password and password confirmation match!"
-                  data:
-                    example: ~
-
-        403:
-          description: Invalid or expired token!
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: boolean
-                    example: false
-                  message:
-                    type: string
-                    example: "Invalid or expired token!"
-                  data:
-                    example: ~
   /schedule:
     post:
+      tags:
+        - "Ticket"
+      summary: Find ticket
       description: Find ticket
       requestBody:
         content:
@@ -948,7 +754,7 @@ components:
             properties:
               fullname:
                 type: string
-                example: Bagus Dwi
+                example: Flynow Foundation
               email:
                 type: string
                 example: flynowb6@gmail.com
