--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-DATABASE_URL=
-JWT_SECRET_KEY=
-=======
 DATABASE_URL=
 
 JWT_SECRET_KEY=
@@ -15,4 +11,6 @@ GOOGLE_REDIRECT_URL=""
 IMAGEKIT_PUBLIC_KEY=""
 IMAGEKIT_PRIVATE_KEY=""
 IMAGEKIT_ENDPOINT_URL=""
->>>>>>> develop
+
+PAYMENT_DEV_SERVER_KEY=""
+PAYMENT_DEV_CLIENT_KEY=""
