--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -4,7 +4,7 @@ info:
   description: API Pemesanan Ticketing Pesawat
   version: 1.0.0
 servers:
-  - url: https://express-development.up.railway.app/api/v1
+  - url: https://express-development-3576.up.railway.app/api/v1
   - url: http://localhost:3000/api/v1
 tags:
   - name: "Users"
