--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
+    "pnpm": "^9.1.3",
     "prisma": "^5.14.0",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.4.2"
